myweb_two_deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myweb
    version: v1
  name: myweb-v1

spec:
  replicas: 1
  selector:
    matchLabels:
      app: myweb
      version: v1
  template:
    metadata:
      labels:
        app: myweb
        version: v1
    spec:
      containers:
      - image: vladreamer/myweb:1
        imagePullPolicy: IfNotPresent
        name: myweb
        resources:
         limits:
           memory: 120Mi
           cpu: "1"
         requests:
           memory: 100Mi
           cpu: "0.2"
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myweb
    version: v2
  name: myweb-v2

spec:
  replicas: 1
  selector:
    matchLabels:
      app: myweb
      version: v2
  template:
    metadata:
      labels:
        app: myweb
        version: v2
    spec:
      containers:
      - image: vladreamer/myweb:3
        imagePullPolicy: IfNotPresent
        name: myweb
        resources:
         limits:
           memory: 120Mi
           cpu: "1"
         requests:
           memory: 100Mi
           cpu: "0.2"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myweb
  name: myweb-svc

spec:
  ports:
  - nodePort: 32223
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myweb
    #version: v2
  #type: LoadBalancer
  type: NodePort
