ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: gateway-ingress
    namespace: default
    annotations:
       nginx.ingress.kubernetes.io/rewrite-target: /$1
       nginx.ingress.kubernetes.io/use-regex: "true"
       kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: vlad2023.ingress
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myweb-svc 
              port:
                number: 80
